--- a/less/fonts.less
+++ b/less/fonts.less
@@ -25,3 +25,17 @@
 	url("../fonts/SFUIDisplay-Medium.eot?#iefix") format("embedded-opentype"),
 	url(../fonts/SFUIDisplay-Medium.woff) format('woff');
 }
+
+@font-face {
+	font-family: SFUIThin;
+	src:url(../fonts/SFUIDisplay-Thin.ttf),
+	url("../fonts/SFUIDisplay-Thin.eot?#iefix") format("embedded-opentype"),
+	url(../fonts/SFUIDisplay-Thin.woff) format('woff');
+}
+
+@font-face {
+	font-family: SFUILight;
+	src:url(../fonts/SFUIDisplay-Light.ttf),
+	url("../fonts/SFUIDisplay-Light.eot?#iefix") format("embedded-opentype"),
+	url(../fonts/SFUIDisplay-Light.woff) format('woff');
+}
