--- a/less/incomes.less
+++ b/less/incomes.less
@@ -113,7 +113,7 @@
 }
 
 .income--second {
-	background-image: url('../img/coins-many.png');
+	background-image: url('../img/coins-in-bag.png');
 	background-position: left 15px;
 }
 
