--- a/less/registration-form-mini.less
+++ b/less/registration-form-mini.less
@@ -106,4 +106,12 @@
 
 .registration-form-mini--bottom {
 	background-color: rgba(76, 133, 161, 0.8);
+
+	.registration-form-mini__button {
+		background-color: #6ab980;
+
+		&:hover {
+			background-color: #5da471;
+		}
+	}
 }
