--- a/less/registration.less
+++ b/less/registration.less
@@ -91,6 +91,7 @@
 		margin-bottom: 20px;
 		font-size: 20px;
 		text-transform: uppercase;
+		font-family: SFUILight;
 
 		@media @mobile {
 			margin-bottom: 10px;
@@ -114,6 +115,7 @@
 
 	&__count {
 		font-size: 80px;
+		font-family: SFUIHeavy;
 
 		@media @mobile {
 			font-size: 30px;
