--- a/less/style.less
+++ b/less/style.less
@@ -24,3 +24,6 @@
 @import "error.less";
 @import "registration-form-mini.less";
 @import "registration.less";
+@import "greeting-bonus.less";
+@import "cashback.less";
+@import "bonus-more.less";
