--- a/less/games.less
+++ b/less/games.less
@@ -1,6 +1,15 @@
 .games {
 	position: relative;
 
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 1px;
+		background-color: #313131;
+	}
+
 	&::after {
 		content: '';
 		position: absolute;
@@ -15,7 +24,7 @@
 		justify-content: space-between;
 		width: 1180px;
 		margin: 0 auto;
-		margin-top: 40px;
+		padding-top: 40px;
 
 		@media @tablet {
 			flex-wrap: wrap;
