--- a/less/blog.less
+++ b/less/blog.less
@@ -113,7 +113,7 @@
 		font-family: SFUIMedium;
 
 		&:hover {
-			background-color: #e3363d;
+			background-color: #de3137;
 		}
 	}
 }
@@ -189,7 +189,7 @@
 		background-color: #ed383f;
 
 		&:hover {
-			background-color: #e3363d;
+			background-color: #de3137;
 		}
 
 		@media @mobile {
