--- a/less/deposites.less
+++ b/less/deposites.less
@@ -38,10 +38,9 @@
 		background-color: #ed383f;
 		font-family: SFUIBold;
 		font-size: 18px;
-		transition: 0.1s;
 
 		&:hover {
-			background-color: #e6373e;
+			background-color: #de3137;
 		}
 	}
 
