--- a/less/jackpot.less
+++ b/less/jackpot.less
@@ -42,10 +42,9 @@
 		background-color: #ed383f;
 		font-family: SFUIBold;
 		font-size: 18px;
-		transition: 0.1s;
 
 		&:hover {
-			background-color: #e3353c;
+			background-color: #de3137;
 		}
 
 		@media @mobile {
