--- a/less/main.less
+++ b/less/main.less
@@ -21,11 +21,15 @@ button {
 	color: #fff;
 	cursor: pointer;
 	outline: none;
+	transition: 0.1s;
 }
 
-form * {
-	-webkit-appearance: none;
-	outline: none;
+form { 
+
+	* {
+		-webkit-appearance: none;
+		outline: none;
+	}
 }
 
 .main-wrapper {
