--- a/less/modal-registration.less
+++ b/less/modal-registration.less
@@ -222,12 +222,9 @@
 		background-color: #ed383f;
 		font-family: SFUIMedium;
 		font-size: 14px;
-		color: #fff;
-		cursor: pointer;
-		transition: 0.1s;
 
 		&:hover {
-			background-color: #dd363c;
+			background-color: #de3137;
 		}
 	}
 }
