--- a/less/partner.less
+++ b/less/partner.less
@@ -69,10 +69,9 @@
 		background-color: #ed383f;
 		font-family: SFUIBold;
 		font-size: 18px;
-		transition: 0.1s;
 
 		&:hover {
-			background-color: #e2383e;
+			background-color: #de3137;
 		}
 	}
 
