--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -30,7 +30,7 @@
 		font-size: 14px;
 
 		&:hover {
-			background-color: #67b37c;
+			background-color: #589f6c;
 		}
 	}
 
@@ -48,7 +48,7 @@
 		cursor: pointer;
 
 		&:hover {
-			background-color: #65ad79;
+			background-color: #6ab980;
 		}
 	}
 }
