--- a/less/prize.less
+++ b/less/prize.less
@@ -62,5 +62,9 @@
 		background-color: #ed383f;
 		font-size: 18px;
 		font-family: SFUIBold;
+
+		&:hover {
+			background-color: #de3137;
+		}
 	}
 }
