--- a/less/registration-form-mini.less
+++ b/less/registration-form-mini.less
@@ -99,7 +99,7 @@
 		transition: 0.1s;
 
 		&:hover {
-			background-color: #dd363c;
+			background-color: #de3137;
 		}
 	}
 }
@@ -111,7 +111,7 @@
 		background-color: #6ab980;
 
 		&:hover {
-			background-color: #5da471;
+			background-color: #589f6c;
 		}
 	}
 }
