--- a/less/slider.less
+++ b/less/slider.less
@@ -86,10 +86,9 @@
 		padding: 25px 40px;
 		background-color: #ed383f;
 		font-size: 16px;
-		transition: 0.1s;
 
 		&:hover {
-			background-color: #ec262e;
+			background-color: #de3137;
 		}
 
 		@media @mobile {
