--- a/less/bonus-more.less
+++ b/less/bonus-more.less
@@ -37,11 +37,9 @@
 		font-family: SFUIBold;
 		font-size: 18px;
 		background-color: #ed383f;
-		cursor: pointer;
-		transition: 0.1s;
 
 		&:hover {
-			background-color: #e2353c;
+			background-color: #de3137;
 		}
 
 		@media @mobile {
