--- a/less/header — копия.less
+++ b/less/header — копия.less
@@ -315,6 +315,7 @@
 						height: auto;
 						padding: 20px;
 						font-size: 16px;
+						opacity: 1;
 					}
 				}
 			}
@@ -337,14 +338,9 @@
 		}
 
 		@media @mobile {
-			position: relative;
-			top: 0;
+			position: absolute;
+			top: 59px;
 			left: 0;
-
-			a {
-				padding: 0;
-				font-size: 0;
-			}
 		}
 	}
 
@@ -357,6 +353,7 @@
 			padding: 0;
 			font-size: 0;
 			background-color: #313131;
+			opacity: 0;
 			transition: 0.3s;
 
 			&:hover {
