--- a/less/tabs.less
+++ b/less/tabs.less
@@ -176,10 +176,9 @@
 		margin-top: 20px;
 		margin-bottom: 20px;
 		background-color: #6ab980;
-		transition: 0.1s;
 
 		&:hover {
-			background-color: #65ad79;
+			background-color: #589f6c;
 		}
 	}
 
