--- a/less/modal-registration.less
+++ b/less/modal-registration.less
@@ -222,6 +222,9 @@
 		background-color: #ed383f;
 		font-family: SFUIMedium;
 		font-size: 14px;
+		color: #fff;
+		transition: 0.1s;
+		cursor: pointer;
 
 		&:hover {
 			background-color: #de3137;
