--- a/less/blog.less
+++ b/less/blog.less
@@ -53,6 +53,8 @@
 
 		@media @tablet {
 			width: 700px;
+			margin-bottom: 50px;
+			line-height: 20px;
 		}
 
 		@media @mobile {
@@ -64,12 +66,12 @@
 .news {
 	position: relative;
 	max-width: 385px;
-	height: 286px;
+	height: 275px;
 	margin-bottom: 20px;
 	background-size: cover;
 
 	@media @tablet {
-		width: 370px;
+		width: 365px;
 	}
 
 	@media @mobile {
