--- a/less/bonus-more.less
+++ b/less/bonus-more.less
@@ -10,7 +10,7 @@
 
 		@media @tablet {
 			width: 748px;
-			justify-content: center;
+			justify-content: space-between;
 		}
 
 		@media @mobile {
