--- a/less/entry.less
+++ b/less/entry.less
@@ -8,6 +8,7 @@
 		justify-content: space-between;
 		width: 1180px;
 		margin: 0 auto;
+		margin-bottom: 40px;
 
 		@media @tablet {
 			width: 748px;
@@ -80,7 +81,7 @@
 		width: 380px;
 
 		@media @tablet {
-			width: 375px;
+			width: 365px;
 		}
 
 		@media @mobile {
