--- a/less/jackpot.less
+++ b/less/jackpot.less
@@ -71,15 +71,14 @@
 	&__image-wrapper {
 		position: absolute;
 		bottom: 0;
-		right: -70px;
+		right: 0;
 
 		@media @tablet {
-			width: 400px;
+			width: 300px;
 		}
 
 		@media @mobile {
-			width: 300px;
-			right: 0;
+			display: none;
 		}
 	}
 
