--- a/less/modal-enter.less
+++ b/less/modal-enter.less
@@ -21,14 +21,23 @@
 		width: ~"calc(100% - 20px)";
 	}
 
+	&__wrapper {
+		text-align: center;
+
+		@media @mobile {
+			width: 100%;
+		}
+	}
+
 	&__character-wrapper {
 		position: absolute;
 		left: -42px;
-		top: -18px;
+		top: 12px;
 		width: 380px;
 
 		@media @tablet {
-			top: 150px;
+			top: 180px;
+			left: -20px;
 			width: 200px;
 		}
 
@@ -86,10 +95,6 @@
 		}
 	}
 
-	&__wrapper {
-		text-align: center;
-	}
-
 	&__forgot-pass {
 		display: -inline-block;
 		margin: 0 auto;
@@ -136,7 +141,7 @@
 	&__button {
 		width: 100%;
 		padding: 20px;
-		margin-bottom: 30px;
+		margin-bottom: 14px;
 		border: none;
 		background-color: #ed383f;
 		font-family: SFUIMedium;
