--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ button {
 form * {
   -webkit-appearance: none;
   outline: none;
+  border-radius: 0;
 }
 .main-wrapper {
   margin-top: 60px;
@@ -118,6 +119,7 @@ form * {
   height: 40px;
   margin-right: 50px;
   background-image: url('../img/logo.png');
+  background-position: center;
 }
 .main-nav__mobile-reg {
   display: none;
@@ -195,7 +197,7 @@ form * {
   transition: 0.1s;
 }
 .main-nav__item a:hover {
-  background-color: #ED383F;
+  background-color: #090909;
 }
 .main-nav__item span {
   padding-top: 30px;
@@ -206,11 +208,13 @@ form * {
   cursor: pointer;
 }
 .main-nav__item span:hover {
-  background-color: #ED383F;
+  background-color: #090909;
+}
+.main-nav__item span span {
+  display: block;
 }
 .main-nav__dropdown {
   position: absolute;
-  z-index: -1;
   top: 50px;
   width: auto;
   list-style: none;
@@ -224,27 +228,29 @@ form * {
   height: 0;
   padding: 0;
   font-size: 0;
-  background-color: #313131;
+  background-color: rgba(9, 9, 9, 0.95);
   transition: 0.3s;
 }
 .main-nav__dropdown-item a:hover {
-  background-color: #414141;
+  background-color: #ed383f;
 }
 .main-nav__item--arrow {
   position: relative;
 }
 .main-nav__item--arrow span {
   position: relative;
+  padding-left: 10px;
+  padding-right: 40px;
 }
 .main-nav__item--arrow span::after {
   content: '';
   position: absolute;
-  left: calc(50% - 7px);
-  bottom: 13px;
-  width: 10px;
-  height: 10px;
-  border-right: 1px solid #bf3136;
-  border-bottom: 1px solid #bf3136;
+  top: 33px;
+  right: 15px;
+  width: 8px;
+  height: 8px;
+  border-right: 1px solid #303030;
+  border-bottom: 1px solid #303030;
   transform: rotate(45deg);
   transition: 0.1s;
 }
@@ -538,7 +544,7 @@ form * {
 .jackpot__image-wrapper {
   position: absolute;
   bottom: 0;
-  right: -70px;
+  right: 0;
 }
 .jackpot__image {
   width: 100%;
@@ -1197,7 +1203,7 @@ form * {
 .news {
   position: relative;
   max-width: 385px;
-  height: 286px;
+  height: 275px;
   margin-bottom: 20px;
   background-size: cover;
 }
@@ -1339,6 +1345,7 @@ form * {
   justify-content: space-between;
   width: 1180px;
   margin: 0 auto;
+  margin-bottom: 40px;
 }
 .entry__header {
   position: relative;
@@ -1646,7 +1653,7 @@ form * {
 .modal-registration__character-wrapper {
   position: absolute;
   left: -35px;
-  top: -38px;
+  top: -8px;
   width: 400px;
 }
 .modal-registration__character {
@@ -1825,10 +1832,13 @@ form * {
   background-size: cover;
   transition: 0.6s;
 }
+.modal-enter__wrapper {
+  text-align: center;
+}
 .modal-enter__character-wrapper {
   position: absolute;
   left: -42px;
-  top: -18px;
+  top: 12px;
   width: 380px;
 }
 .modal-enter__character {
@@ -1870,9 +1880,6 @@ form * {
 }
 .modal-enter__close:hover::after {
   background-color: #fff;
-}
-.modal-enter__wrapper {
-  text-align: center;
 }
 .modal-enter__forgot-pass {
   display: -inline-block;
@@ -1929,7 +1936,7 @@ form * {
 .enter-form__button {
   width: 100%;
   padding: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 14px;
   border: none;
   background-color: #ed383f;
   font-family: SFUIMedium;
@@ -2170,6 +2177,7 @@ form * {
   width: 330px;
   position: absolute;
   z-index: -1;
+  left: 20px;
   top: 192px;
   opacity: 0;
   transition: 0.3s;
@@ -2483,6 +2491,44 @@ form * {
 .bonus-more__button:hover {
   background-color: #de3137;
 }
+.social-enter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 25px;
+  padding: 12px;
+  border: 1px solid #5d5d5d;
+}
+.social-enter__text {
+  display: block;
+  font-size: 14px;
+  color: #d9d9d9;
+}
+.social-enter__socials {
+  display: flex;
+  justify-content: space-between;
+  width: 94px;
+  height: 26px;
+}
+.social-enter__soc {
+  width: 26px;
+  height: 26px;
+  background-size: 100%;
+}
+.social-enter__soc--fb {
+  background-image: url('../img/facebook.png');
+}
+.social-enter__soc--vk {
+  background-image: url('../img/vk.png');
+}
+.social-enter__soc--tw {
+  background-image: url('../img/twitter.png');
+}
+.social-enter--reg {
+  background-color: rgba(60, 60, 60, 0.5);
+  border: none;
+}
 @media (min-width: 788px) {
   .main-wrapper {
     margin-top: 77px;
@@ -2591,6 +2637,9 @@ form * {
     padding: 20px;
     font-size: 16px;
   }
+  .main-nav__item--arrow span {
+    padding: 20px;
+  }
   .main-nav__item--arrow span::after {
     right: 20px;
     top: 23px;
@@ -2665,7 +2714,7 @@ form * {
     padding-bottom: 50px;
   }
   .jackpot__image-wrapper {
-    width: 400px;
+    width: 300px;
   }
   .last-winners__wrapper {
     width: 748px;
@@ -2719,9 +2768,11 @@ form * {
   }
   .blog__text {
     width: 700px;
+    margin-bottom: 50px;
+    line-height: 20px;
   }
   .news {
-    width: 370px;
+    width: 365px;
   }
   .blog-slider__wrapper {
     width: 748px;
@@ -2740,7 +2791,7 @@ form * {
     width: 100%;
   }
   .entry-right .news {
-    width: 375px;
+    width: 365px;
   }
   .partner__wrapper {
     width: 748px;
@@ -2778,7 +2829,7 @@ form * {
     width: 700px;
   }
   .modal-registration__character-wrapper {
-    top: 170px;
+    top: 210px;
     width: 200px;
   }
   .registration-form {
@@ -2798,7 +2849,8 @@ form * {
     width: 550px;
   }
   .modal-enter__character-wrapper {
-    top: 150px;
+    top: 180px;
+    left: -20px;
     width: 200px;
   }
   .modal-contact {
@@ -2852,7 +2904,7 @@ form * {
     text-align: center;
   }
   .greeting-bonus__wrapper {
-    justify-content: center;
+    justify-content: space-around;
     width: 748px;
     padding-top: 60px;
   }
@@ -2864,15 +2916,17 @@ form * {
     margin-bottom: 50px;
   }
   .deposit-condition {
-    width: 50%;
+    width: 25%;
     margin-bottom: 60px;
+    padding-top: 0;
+    padding-left: 10px;
   }
   .cashback__wrapper {
     width: 748px;
   }
   .bonus-more__wrapper {
     width: 748px;
-    justify-content: center;
+    justify-content: space-between;
   }
 }
 @media (max-width: 788px) {
@@ -2897,6 +2951,7 @@ form * {
     width: 40px;
     margin: 0;
     background-image: url('../img/favicon.png');
+    background-position: center;
   }
   .main-nav__mobile-reg {
     display: inline-block;
@@ -3018,8 +3073,7 @@ form * {
     display: none;
   }
   .jackpot__image-wrapper {
-    width: 300px;
-    right: 0;
+    display: none;
   }
   .last-winners__wrapper {
     width: 100%;
@@ -3304,6 +3358,10 @@ form * {
   .registration-form {
     width: 100%;
   }
+  .registration-form__header {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
   .registration-form__name,
   .registration-form__nickname,
   .registration-form__password,
@@ -3322,9 +3380,14 @@ form * {
   }
   .registration-form__label-checkbox {
     margin-bottom: 20px;
+    font-size: 12px;
+    line-height: 15px;
   }
   .modal-enter {
     width: calc(100% - 20px);
+  }
+  .modal-enter__wrapper {
+    width: 100%;
   }
   .modal-enter__character-wrapper {
     display: none;
@@ -3389,7 +3452,8 @@ form * {
     width: 100%;
   }
   .deposit {
-    width: 100%;
+    width: auto;
+    min-height: 80px;
   }
   .deposit__percents {
     font-size: 26px;
@@ -3399,8 +3463,10 @@ form * {
   }
   .deposit-condition {
     width: 100%;
-    padding-top: 0;
-    padding-left: 10px;
+    text-align: center;
+  }
+  .deposit-condition__description {
+    max-width: none;
   }
   .cashback__wrapper {
     width: 100%;
@@ -3420,10 +3486,18 @@ form * {
   .bonus-more__button {
     width: 100%;
   }
+  .social-enter__text {
+    font-size: 12px;
+  }
 }
 @media (max-width: 1220px) and (max-width: 1220px) {
   .main-nav__item--active .main-nav__dropdown {
     top: 0;
+  }
+}
+@media (max-width: 1220px) and (max-width: 788px) {
+  .main-nav__item--active .main-nav__dropdown {
+    z-index: 1;
   }
 }
 @media (max-width: 300px) {
