--- a/less/modal-registration.less
+++ b/less/modal-registration.less
@@ -23,11 +23,11 @@
 	&__character-wrapper {
 		position: absolute;
 		left: -35px;
-		top: -38px;
+		top: -8px;
 		width: 400px;
 
 		@media @tablet {
-			top: 170px;
+			top: 210px;
 			width: 200px;
 		}
 
@@ -106,6 +106,11 @@
 		margin-bottom: 40px;
 		font-size: 25px;
 		text-transform: uppercase;
+
+		@media @mobile {
+			font-size: 18px;
+			margin-bottom: 20px;
+		}
 	}
 
 	input {
@@ -183,6 +188,8 @@
 
 		@media @mobile {
 			margin-bottom: 20px;
+			font-size: 12px;
+			line-height: 15px;
 		}
 	}
 
