--- a/less/modal-registration.less
+++ b/less/modal-registration.less
@@ -156,11 +156,9 @@
 		position: relative;
 		width: 270px;
 		height: 45px;
-		margin-bottom: 20px;
-		padding-left: 13px;
-		padding: 0 13px; 
 		border: none;
 		font-family: SFUIRegular;
+		font-size: 14px;
 		color: #999999;
 		cursor: pointer;
 
