--- a/less/registration-form-mini.less
+++ b/less/registration-form-mini.less
@@ -9,7 +9,6 @@
 
 	&__email,
 	&__nickname,
-	&__select,
 	&__password,
 	&__password-confirm {
 		width: 100%;
@@ -42,7 +41,9 @@
 	&__select {
 		font-family: SFUIRegular;
 		color: #999999;
-		cursor: pointer;
+		width: 100%;
+		margin-bottom: 18px;
+		font-size: 13px;
 	}
 
 	&__label-checkbox {
